--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 //              ;}
              const noveOsobe=osobe.map(mapiranje);
              function mapiranje(){
-                 osobe.age:parseInt(osobe.age)+=5;
+                 osobe.age=parseInt(osobe.age)+5;
 
             //----------prikaz podataka------------//               
                   let popis=document.getElementById("popis");
